[package]
name = "solana-multi-tier-oracle"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_multi_tier_oracle"
path = "src/lib.rs"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
bytemuck = { version = "1.23", features = ["derive", "min_const_generics"] }
ethnum = "1.5.2"

[dev-dependencies]
proptest = "1.7"

